# shoes_DL

Shoes_DL/: Makefile  README.md  pyproject.toml
Shoes_DL/Shoes/: __init__.py  dataset.py  features.py  plots.py
Shoes_DL/Shoes/modeling/: predict.py  train.py
Shoes_DL/docs/: mkdocs.yml
Shoes_DL/docs/docs/: index.md
