[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Shoes"
version = "0.0.1"
description = "shoes project for the deep learning class"
authors = [
  { name = "max,jose luis, ivan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Shoes"]
include = ["pyproject.toml", "Shoes/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Shoes"]
force-sort-within-sections = true

